--- a/about.html
+++ b/about.html
@@ -2,21 +2,21 @@
 layout: page
 title: "About"
 description: "Hey, this is Hux."
-header-img: "img/about-bg-walle.jpg"
+header-img: "img/about-background.jpg"
 multilingual: true
 ---
 
 <!-- Language Selector -->
-<select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
+<!-- <select class="sel-lang" onchange= "onLanChange(this.options[this.options.selectedIndex].value)">
     <option value="0" selected> 中文 Chinese </option>
     <option value="1"> 英文 English </option>
-</select>
+</select> -->
 
 <!-- Chinese Version -->
-<div class="zh post-container">
+<!-- <div class="zh post-container">
     {% capture about_zh %}{% include about/zh.md %}{% endcapture %}
     {{ about_zh | markdownify }}
-</div>
+</div> -->
 
 <!-- English Version -->
 <div class="en post-container">
