--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is Hux."
+description: "Hi, this is Biyun."
 header-img: "img/about-background.jpg"
 multilingual: true
 ---
