--- a/tags.html
+++ b/tags.html
@@ -1,7 +1,7 @@
 ---
 title: Tags
 layout: default
-description: keep hungry keep foolish
+<!-- description: keep hungry keep foolish  --> <!-- To be dispalyed under the title. -->
 header-img: "img/tag-bg.jpg"
 ---
 
