--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,22 +23,24 @@ layout: default
 				<ul class="cbp_tmtimeline">
 					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">Yanshuo.io (演说.io)</h2>
-							<time>2016.06</time>
-							<img src="images/work-yanshuo.jpg">
+							<h2 id="boxoffice">Mentor in Java Programming @ Coursera</h2>
+							<time>Oct 2017 - Present</time>
+							<img src="images/java-coursera.jpeg">
 							<ul>
 								<li>
-									"Yanshuo.io" is an online full-featured presentation software to create Web-based slides which are linkable, sharable, cross-platform and without delivery friction. It differentiate from traditional presentation tools such as Powerpoint and Keynote due to its web-friendly and its strong belief in Web.
+									<strong>Java Programming: Arrays, Lists, and Structured Data - Duke University | Coursera</strong>
+                                    <br>
+                                    Java Programming: Arrays, Lists, and Structured Data from Duke University. Build on the software engineering skills in “Java Programming: Solving Problems with Software” by learning new data structures. Use these data structures to build more complex programs that use Java’s object-oriented features. At the end of the course you will write an encryption program and a program to break your encryption algorithm.
 								</li>
 								<li class="skill">
-									<span><b>JS</b></span>
+									<span><b>Java</b></span>
 									<span class="i-react"></span>
-									<span class="link"><a target="_blank" href="https://yanshuo.io">Try it</a></span>
+									<span class="link"><a target="_blank" href="https://www.coursera.org/learn/java-programming-arrays-lists-data/">Java Programming by Duke</a></span>
 								</li>
 							</ul>
 						</div>
 					</li>
-					<li>
+					<!-- <li>
 						<div class="cbp_tmlabel">
 							<h2 id="boxoffice">BoxOffice @Wepiao</h2>
 							<time>2015.09</time>
@@ -93,7 +95,7 @@ layout: default
 								</li>
 							</ul>
 						</div>
-					</li>
+					</li> -->
 					<!--<li>
 						<div class="cbp_tmlabel">
 							<h2>SENOVA WebApp</h2>
@@ -111,7 +113,7 @@ layout: default
 							</ul>
 						</div>
 					</li>-->
-					<li>
+					<!-- <li>
 						<div class="cbp_tmlabel">
 							<h2 id="hslider">jQuery.HSlider</h2>
 							<time>2013.10</time>
@@ -143,8 +145,8 @@ layout: default
 								</li>
 							</ul>
 						</div>
-					</li>
-					<li>
+					</li> -->
+					<!-- <li>
 						<div class="cbp_tmlabel">
 							<h2>Intern @LxU Studio</h2>
 							<time>2013.06 - 08</time>
@@ -176,8 +178,8 @@ layout: default
 								</li>
 							</ul>
 						</div>
-					</li>
-					<li>
+					</li> -->
+					<!-- <li>
 						<div class="cbp_tmlabel">
 							<h2>Home - UI Design</h2>
 							<time>2012.11</time>
@@ -192,7 +194,7 @@ layout: default
 								</li>
 							</ul>
 						</div>
-					</li>
+					</li> -->
 				</ul>
 			</div>
 		</div>
