Disable icons in Portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,7 +9,7 @@ layout: default
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Hux - Timeline</title>
+		<title>Biyun's Timeline</title>
 		<link rel="stylesheet" type="text/css" href="css/timeline.css" />
 		<script src="js/modernizr.custom.js"></script>
 	</head>
@@ -17,7 +17,7 @@ layout: default
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
 				<img width="175" height="175" style="border-radius:50%;" src="/img/avatar-hux.jpg">
-				<h1>Hux</h1>
+				<h1>Biyun</h1>
 			</header>
 			<div class="main">
 				<ul class="cbp_tmtimeline">
@@ -28,13 +28,14 @@ layout: default
 							<img src="images/java-coursera.jpeg">
 							<ul>
 								<li>
-									<strong>Java Programming: Arrays, Lists, and Structured Data - Duke University | Coursera</strong>
-                                    <br>
+									<strong>Java Programming: Arrays, Lists, and Structured Data - Duke University</strong>
+                                    <br />
+                                    <br />
                                     Java Programming: Arrays, Lists, and Structured Data from Duke University. Build on the software engineering skills in “Java Programming: Solving Problems with Software” by learning new data structures. Use these data structures to build more complex programs that use Java’s object-oriented features. At the end of the course you will write an encryption program and a program to break your encryption algorithm.
 								</li>
 								<li class="skill">
 									<span><b>Java</b></span>
-									<span class="i-react"></span>
+									<!-- <span class="i-react"></span> -->
 									<span class="link"><a target="_blank" href="https://www.coursera.org/learn/java-programming-arrays-lists-data/">Java Programming by Duke</a></span>
 								</li>
 							</ul>
