--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,8 +34,8 @@ layout: default
                                     Java Programming: Arrays, Lists, and Structured Data from Duke University. Build on the software engineering skills in “Java Programming: Solving Problems with Software” by learning new data structures. Use these data structures to build more complex programs that use Java’s object-oriented features. At the end of the course you will write an encryption program and a program to break your encryption algorithm.
 								</li>
 								<li class="skill">
-									<span><b> Java</b></span>
-									<!-- <span class="i-react"></span> -->
+									<span class="i-java"></span>
+									<span><b>Java</b></span>
 									<span class="link"><a target="_blank" href="https://www.coursera.org/learn/java-programming-arrays-lists-data/">Java Programming by Duke</a></span>
 								</li>
 							</ul>
