--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,6 +23,27 @@ layout: default
 				<ul class="cbp_tmtimeline">
 					<li>
 						<div class="cbp_tmlabel">
+							<h2 id="boxoffice">Grow with Google Challenge Scholarship</h2>
+							<time>Jan 2017</time>
+							<img src="images/google-scholarship.png">
+							<ul>
+								<li>
+									<strong>Front-End Web Developer Track</strong>
+                                    <br />
+                                    <br />
+                                    I won the scholarship sponsored by Google to study the Front-end essentials on Udacity.
+								</li>
+								<li class="skill">
+									<span class="i-front-end"></span>
+									<span class="i-jquery"></span>
+									<span><b>Front-end</b></span>
+									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Become a Front End Developer</a></span>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="cbp_tmlabel">
 							<h2 id="boxoffice">Mentor in Java Programming @ Coursera</h2>
 							<time>Oct 2017 - Present</time>
 							<img src="images/java-coursera.jpeg">
