--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,8 +24,8 @@ layout: default
 					<li>
 						<div class="cbp_tmlabel">
 							<h2 id="boxoffice">Grow with Google Challenge Scholarship</h2>
-							<time>Jan 2017</time>
-							<img src="images/google-scholarship.png">
+							<time>Jan 2018</time>
+							<img src="images/google-scholarship.jpg">
 							<ul>
 								<li>
 									<strong>Front-End Web Developer Track</strong>
@@ -36,8 +36,7 @@ layout: default
 								<li class="skill">
 									<span class="i-front-end"></span>
 									<span class="i-jquery"></span>
-									<span><b>Front-end</b></span>
-									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Become a Front End Developer</a></span>
+									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Become a Front End Developer</a></span>s
 								</li>
 							</ul>
 						</div>
