--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -36,7 +36,7 @@ layout: default
 								<li class="skill">
 									<span class="i-front-end"></span>
 									<span class="i-jquery"></span>
-									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Become a Front End Developer</a></span>s
+									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Become a Front End Developer</a></span>
 								</li>
 							</ul>
 						</div>
