--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,9 +34,9 @@ layout: default
                                     I won the scholarship sponsored by Google to study the Front-end essentials on Udacity.
 								</li>
 								<li class="skill">
-									<span class="i-front-end"></span>
+									<span class="i-react"></span>
 									<span class="i-jquery"></span>
-									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Become a Front End Developer</a></span>
+									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Front End Developer</a></span>
 								</li>
 							</ul>
 						</div>
