--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -51,7 +51,9 @@ layout: default
 									<strong>Java Programming: Arrays, Lists, and Structured Data - Duke University</strong>
                                     <br />
                                     <br />
-                                    Java Programming: Arrays, Lists, and Structured Data from Duke University. Build on the software engineering skills in “Java Programming: Solving Problems with Software” by learning new data structures. Use these data structures to build more complex programs that use Java’s object-oriented features. At the end of the course you will write an encryption program and a program to break your encryption algorithm.
+                                    I was recruited to be a mentor in this program. Here is a short description of the course:
+                                    <br />
+                                    Build on the software engineering skills in “Java Programming: Solving Problems with Software” by learning new data structures. Use these data structures to build more complex programs that use Java’s object-oriented features. At the end of the course you will write an encryption program and a program to break your encryption algorithm.
 								</li>
 								<li class="skill">
 									<span class="i-java"></span>
