--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,12 +23,28 @@ layout: default
 				<ul class="cbp_tmtimeline">
 					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">Grow with Google Challenge Scholarship</h2>
-							<time>Jan 2018</time>
+							<h2>Favorite Reaturants in NYC</h2>
+							<time>Aug. 2018</time>
+							<img src="images/fav_res_nyc.png">
+							<ul>
+								<li>
+									A web app that presents some of my favorite restaurants in New York City. The project is implemented by Rect.js, Google Maps API and Foursquare API.
+								</li>
+								<li class="skill">
+									<span class="i-react"></span>
+									<span class="link"><a target="_blank" href="https://biyunwu.com/react-neighbourhood-map/">Fav. Restaurants NYC</a></span>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="cbp_tmlabel">
+							<h2 id="boxoffice">Two Grow with Google Challenge Scholarships</h2>
+							<time>Jan. & Apr. 2018</time>
 							<img src="images/google-scholarship.jpg">
 							<ul>
 								<li>
-									<strong>Front-End Web Developer Track</strong>
+									<strong>Front-End Web Developer Nanodegree</strong>
                                     <br />
                                     <br />
                                     I won the scholarship sponsored by Google to study the Front-end essentials on Udacity.
@@ -44,7 +60,7 @@ layout: default
 					<li>
 						<div class="cbp_tmlabel">
 							<h2 id="boxoffice">Mentor in Java Programming @ Coursera</h2>
-							<time>Oct 2017 - Present</time>
+							<time>Oct. 2017 - Present</time>
 							<img src="images/java-coursera.jpeg">
 							<ul>
 								<li>
