Adjust 'portfolio' page

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,8 +16,8 @@ layout: default
 	<body>
 		<div class="container" style="margin:0;padding:0;width:100%;">
 			<header>
-				<img width="175" height="175" style="border-radius:50%;" src="/img/home-bg.jpg">
-				<h1>Biyun</h1>
+				<!-- <img width="175" height="175" style="border-radius:50%;" src="/img/home-bg.jpg">
+				<h1>Biyun</h1> -->
 			</header>
 			<div class="main">
 				<ul class="cbp_tmtimeline">
