--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,6 +32,8 @@ layout: default
 								</li>
 								<li class="skill">
 									<span class="i-react"></span>
+									<span>Google Maps API</span>
+									<span>Foursquare API</span>
 									<span class="link"><a target="_blank" href="https://biyunwu.com/react-neighbourhood-map/">Fav. Restaurants NYC</a></span>
 								</li>
 							</ul>
