Add item to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -32,9 +32,23 @@ layout: default
 								</li>
 								<li class="skill">
 									<span class="i-react"></span>
-									<span>Google Maps API</span>
-									<span>Foursquare API</span>
 									<span class="link"><a target="_blank" href="https://biyunwu.com/react-neighbourhood-map/">Fav. Restaurants NYC</a></span>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="cbp_tmlabel">
+							<h2>Myreads</h2>
+							<time>Jul. 2018</time>
+							<img src="images/myreads.jpg">
+							<ul>
+								<li>
+									A personal Reading List project which is implemented by React.js.
+								</li>
+								<li class="skill">
+									<span class="i-react"></span>
+									<span class="link"><a target="_blank" href="https://github.com/biyunwu/reactnd-project-myreads">Fav. Restaurants NYC</a></span>
 								</li>
 							</ul>
 						</div>
