Add item to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -48,7 +48,23 @@ layout: default
 								</li>
 								<li class="skill">
 									<span class="i-react"></span>
-									<span class="link"><a target="_blank" href="https://github.com/biyunwu/reactnd-project-myreads">Fav. Restaurants NYC</a></span>
+									<span class="link"><a target="_blank" href="https://github.com/biyunwu/reactnd-project-myreads">Myreads</a></span>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="cbp_tmlabel">
+							<h2>Memory Game</h2>
+							<time>May. 2018</time>
+							<img src="images/memory_game.gif">
+							<ul>
+								<li>
+									A memory game project which is implemented by vanilla JavsScript, css animation and Font Awsome icons.
+								</li>
+								<li class="skill">
+									<span class="i-javascript"></span>
+									<span class="link"><a target="_blank" href="https://biyunwu.com/memory-game/">Memory Game</a></span>
 								</li>
 							</ul>
 						</div>
