Change link text

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,7 +34,8 @@ layout: default
 									<span class="i-react"></span>
 									<span class="i-googlemap"></span>
 									<span class="i-foursquare"></span>
-									<span class="link"><a target="_blank" href="https://biyunwu.com/react-neighbourhood-map/">Fav. Restaurants NYC</a></span>
+									<span class="link"><a target="_blank" href="https://biyunwu.com/react-neighbourhood-map/">View Demo</a></span>
+									<span class="link"><a target="_blank" href="https://github.com/biyunwu/react-neighbourhood-map">GitHub Repository</a></span>
 								</li>
 							</ul>
 						</div>
