Adjust portfolio items

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -35,7 +35,6 @@ layout: default
 									<span class="i-googlemap"></span>
 									<span class="i-foursquare"></span>
 									<span class="link"><a target="_blank" href="https://biyunwu.com/react-neighbourhood-map/">View Demo</a></span>
-									<span class="link"><a target="_blank" href="https://github.com/biyunwu/react-neighbourhood-map">GitHub Repository</a></span>
 								</li>
 							</ul>
 						</div>
@@ -51,7 +50,7 @@ layout: default
 								</li>
 								<li class="skill">
 									<span class="i-react"></span>
-									<span class="link"><a target="_blank" href="https://github.com/biyunwu/reactnd-project-myreads">Myreads</a></span>
+									<span class="link"><a target="_blank" href="https://github.com/biyunwu/reactnd-project-myreads">GitHub Repository</a></span>
 								</li>
 							</ul>
 						</div>
@@ -67,7 +66,7 @@ layout: default
 								</li>
 								<li class="skill">
 									<span class="i-javascript"></span>
-									<span class="link"><a target="_blank" href="https://biyunwu.com/memory-game/">Memory Game</a></span>
+									<span class="link"><a target="_blank" href="https://biyunwu.com/memory-game/">View Demo</a></span>
 								</li>
 							</ul>
 						</div>
@@ -87,7 +86,7 @@ layout: default
 								<li class="skill">
 									<span class="i-react"></span>
 									<span class="i-jquery"></span>
-									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">Front End Developer</a></span>
+									<span class="link"><a target="_blank" href="https://www.udacity.com/course/front-end-web-developer-nanodegree--nd001">More Details</a></span>
 								</li>
 							</ul>
 						</div>
@@ -109,7 +108,7 @@ layout: default
 								<li class="skill">
 									<span class="i-java"></span>
 									<span><b>Java</b></span>
-									<span class="link"><a target="_blank" href="https://www.coursera.org/learn/java-programming-arrays-lists-data/">Java Programming by Duke</a></span>
+									<span class="link"><a target="_blank" href="https://www.coursera.org/learn/java-programming-arrays-lists-data/">More Details</a></span>
 								</li>
 							</ul>
 						</div>
