--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,7 +50,25 @@ layout: default
 								</li>
 								<li class="skill">
 									<span class="i-react"></span>
-									<span class="link"><a target="_blank" href="https://github.com/biyunwu/reactnd-project-myreads">GitHub Repository</a></span>
+									<span class="link"><a target="_blank" href="https://github.com/biyunwu/reactnd-project-myreads">GitHub</a></span>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="cbp_tmlabel">
+							<h2>Yelp Restaurant</h2>
+							<time>May. 2018</time>
+							<img src="images/yelp_restaurant.jpg">
+							<ul>
+								<li>
+									A full stack project built with Express.js, MongoDB and RESTful API.
+								</li>
+								<li class="skill">
+									<span class="i-express"></span>
+									<span class="i-mongodb"></span>
+									<span class="i-restful"></span>
+									<span class="link"><a target="_blank" href="https://github.com/biyunwu/yelp-restaurants">GitHub</a></span>
 								</li>
 							</ul>
 						</div>
@@ -67,6 +85,22 @@ layout: default
 								<li class="skill">
 									<span class="i-javascript"></span>
 									<span class="link"><a target="_blank" href="https://biyunwu.com/memory-game/">View Demo</a></span>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="cbp_tmlabel">
+							<h2>Movie Recommendation System</h2>
+							<time>Nov. 2017</time>
+							<img src="images/movie_recmmendation.jpg">
+							<ul>
+								<li>
+									A backend system built in Java which offers movie recommendation.
+								</li>
+								<li class="skill">
+									<span class="i-java"></span>
+									<span class="link"><a target="_blank" href="https://github.com/biyunwu/movie_recommendation_system">GitHub</a></span>
 								</li>
 							</ul>
 						</div>
