Fix titles to accommodate mobile devices

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -100,6 +100,7 @@ layout: default
 								</li>
 								<li class="skill">
 									<span class="i-java"></span>
+									<span><b>Java</b></span>
 									<span class="link"><a target="_blank" href="https://github.com/biyunwu/movie_recommendation_system">GitHub</a></span>
 								</li>
 							</ul>
@@ -107,7 +108,7 @@ layout: default
 					</li>
 					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">Two Grow with Google Challenge Scholarships</h2>
+							<h2 id="boxoffice">Two Google Scholarships</h2>
 							<time>Jan. & Apr. 2018</time>
 							<img src="images/google-scholarship.jpg">
 							<ul>
@@ -127,12 +128,12 @@ layout: default
 					</li>
 					<li>
 						<div class="cbp_tmlabel">
-							<h2 id="boxoffice">Mentor in Java Programming @ Coursera</h2>
+							<h2>Java Mentor</h2>
 							<time>Oct. 2017 - Present</time>
 							<img src="images/java-coursera.jpeg">
 							<ul>
 								<li>
-									<strong>Java Programming: Arrays, Lists, and Structured Data - Duke University</strong>
+									<strong>"Java Programming: Arrays, Lists, and Structured Data - Duke University" offered by Duke University on Coursera</strong>
                                     <br />
                                     <br />
                                     I was recruited to be a mentor in this program. Here is a short description of the course:
