--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -28,7 +28,7 @@ layout: default
 							<img src="images/fav_res_nyc.png">
 							<ul>
 								<li>
-									A web app that presents some of my favorite restaurants in New York City. The project is implemented by Rect.js, Google Maps API and Foursquare API.
+									A responsive web app that presents some of my favorite restaurants in New York City. The project is implemented by Rect.js, Google Maps API and Foursquare API.
 								</li>
 								<li class="skill">
 									<span class="i-react"></span>
