--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,6 +23,22 @@ layout: default
 				<ul class="cbp_tmtimeline">
 					<li>
 						<div class="cbp_tmlabel">
+							<h2>Professor Jiang's scholarly website</h2>
+							<time>Sep. 2018</time>
+							<img src="images/fav_res_nyc.png">
+							<ul>
+								<li>
+									The website is built to showcase Professor Jiang's academic works that include books, articles and notable talks. The project is built with React, React Router and some other open source React components. 
+								</li>
+								<li class="skill">
+									<span class="i-react"></span>
+									<span class="link"><a target="_blank" href="https://taojiangscholar.com">View Demo</a></span>
+								</li>
+							</ul>
+						</div>
+					</li>
+					<li>
+						<div class="cbp_tmlabel">
 							<h2>Favorite Reaturants in NYC</h2>
 							<time>Aug. 2018</time>
 							<img src="images/fav_res_nyc.png">
@@ -39,7 +55,7 @@ layout: default
 							</ul>
 						</div>
 					</li>
-					<li>
+					<!-- <li>
 						<div class="cbp_tmlabel">
 							<h2>Myreads</h2>
 							<time>Jul. 2018</time>
@@ -54,7 +70,7 @@ layout: default
 								</li>
 							</ul>
 						</div>
-					</li>
+					</li> -->
 					<li>
 						<div class="cbp_tmlabel">
 							<h2>Yelp Restaurant</h2>
@@ -106,7 +122,7 @@ layout: default
 							</ul>
 						</div>
 					</li>
-					<li>
+					<!-- <li>
 						<div class="cbp_tmlabel">
 							<h2 id="boxoffice">Two Google Scholarships</h2>
 							<time>Jan. & Apr. 2018</time>
@@ -125,8 +141,8 @@ layout: default
 								</li>
 							</ul>
 						</div>
-					</li>
-					<li>
+					</li> -->
+					<!-- <li>
 						<div class="cbp_tmlabel">
 							<h2>Java Mentor</h2>
 							<time>Oct. 2017 - Present</time>
@@ -147,7 +163,7 @@ layout: default
 								</li>
 							</ul>
 						</div>
-					</li>
+					</li> -->
 					<!-- <li>
 						<div class="cbp_tmlabel">
 							<h2 id="boxoffice">BoxOffice @Wepiao</h2>
