--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -26,6 +26,8 @@ layout: default
 							<h2>Professor Jiang's scholarly website</h2>
 							<time>Sep. 2018</time>
 							<img src="images/tj.png">
+							<img src="images/tj-potrait.png">
+							<img src="images/tj-landscape.png">
 							<ul>
 								<li>
 									The website is built to showcase Professor Jiang's academic works that include books, articles and notable talks. The project is built with React, React Router and some other open source React components. 
