--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -25,8 +25,8 @@ layout: default
 						<div class="cbp_tmlabel">
 							<h2>Professor Jiang's scholarly website</h2>
 							<time>Sep. 2018</time>
-							<img src="images/tj.png">
-							<img src="images/tj-potrait.png">
+							<img src="images/tj.png" style="margin-bottom: 0">
+							<img src="images/tj-potrait.png" style="margin-bottom: 0">
 							<img src="images/tj-landscape.png">
 							<ul>
 								<li>
@@ -34,7 +34,7 @@ layout: default
 								</li>
 								<li class="skill">
 									<span class="i-react"></span>
-									<span class="link"><a target="_blank" href="https://taojiangscholar.com">View Demo</a></span>
+									<span class="link"><a target="_blank" href="https://taojiangscholar.com">Visit</a></span>
 								</li>
 							</ul>
 						</div>
