--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,14 +23,14 @@ layout: default
 				<ul class="cbp_tmtimeline">
 					<li>
 						<div class="cbp_tmlabel">
-							<h2>Professor Jiang's scholarly website</h2>
+							<h2>A scholarly website</h2>
 							<time>Sep. 2018</time>
 							<img src="images/tj.png" style="margin-bottom: 0">
 							<img src="images/tj-potrait.png" style="margin-bottom: 0">
 							<img src="images/tj-landscape.png">
 							<ul>
 								<li>
-									The website is built to showcase Professor Jiang's academic works that include books, articles and notable talks. The project is built with React, React Router and some other open source React components. 
+									The website is built to showcase Professor Jiang's academic works that include books, articles and notable talks. The responsive web project is built with React, React Router, CSS Grid, Flexbox and some other open source React components. 
 								</li>
 								<li class="skill">
 									<span class="i-react"></span>
